--- a/.github/workflows/docker-image-fastapi.yml
+++ b/.github/workflows/docker-image-fastapi.yml
@@ -21,8 +21,9 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
       with:
         region: ${{ secrets.AWS_REGION }}
-        access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+        role-session-name: GitHubActions
+        duration-seconds: 900
 
     - name: Build, tag, and push image to ECR
       env:
