--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,20 +1,11 @@
 # Use the official Python image
 FROM python:3.10
 
-# Update and install necessary packages
-RUN apt-get update && \
-    apt-get install -y freetds-dev libssl-dev && \
-    rm -rf /var/lib/apt/lists/*
-
-# Set environment variables
-ENV LDFLAGS="-L/usr/lib/x86_64-linux-gnu -L/usr/lib/i386-linux-gnu"
-ENV CFLAGS="-I/usr/include"
-
 # Set the working directory inside the container
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
-COPY . .
+COPY . /app
 
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
