--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -14,4 +14,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 8001
 
 # Run app.py when the container launches
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8001"]
+CMD ["uvicorn", "--host", "0.0.0.0", "--port", "8001", "--log-level", "trace", "app.main:app"]
