--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,173 +1,44 @@
-aiohttp==3.9.5
-aiomysql==0.2.0
-aiosignal==1.3.1
 annotated-types==0.7.0
-anthropic==0.30.0
-anyio==4.4.0
-asgiref==3.8.1
-astor==0.8.1
-async-timeout==4.0.3
-attrs==23.2.0
-backoff==2.2.1
-bcrypt==4.1.3
-beautifulsoup4==4.12.3
-Bottleneck==1.3.7
-build==1.2.1
-cachetools==5.3.3
-certifi==2024.6.2
-cffi==1.16.0
+asttokens==2.4.1
+cachetools==5.4.0
+certifi==2024.7.4
 charset-normalizer==3.3.2
-chroma-hnswlib==0.7.3
-chromadb==0.5.3
-click==8.1.7
 colorama==0.4.6
-coloredlogs==15.0.1
-contourpy==1.2.1
-cryptography==42.0.8
-cycler==0.12.1
-Cython==3.0.10
-dataclasses-json==0.6.7
 decorator==5.1.1
-Deprecated==1.2.14
-distro==1.9.0
-dnspython==2.6.1
-email_validator==2.2.0
-exceptiongroup==1.2.1
-fastapi==0.111.0
-fastapi-cli==0.0.4
-filelock==3.15.4
-fire==0.6.0
-flatbuffers==24.3.25
-fonttools==4.53.1
-frozenlist==1.4.1
-fsspec==2024.6.1
-google-auth==2.30.0
+exceptiongroup==1.2.2
+executing==2.0.1
+google-ai-generativelanguage==0.6.6
+google-api-core==2.19.1
+google-api-python-client==2.139.0
+google-auth==2.32.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.7.2
 googleapis-common-protos==1.63.2
-greenlet==3.0.3
-grpcio==1.64.1
-h11==0.14.0
-httpcore==1.0.5
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.23.4
-humanfriendly==10.0
+grpcio==1.65.2
+grpcio-status==1.62.2
+httplib2==0.22.0
 idna==3.7
-imageio==2.34.2
-imgaug==0.4.0
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
-intel-cmplr-lib-ur==2024.2.0
-intel-openmp==2024.2.0
-Jinja2==3.1.4
-jiter==0.5.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-kiwisolver==1.4.5
-kubernetes==30.1.0
-langchain==0.2.6
-langchain-community==0.2.6
-langchain-core==0.2.10
-langchain-openai==0.1.11
-langchain-text-splitters==0.2.2
-langsmith==0.1.82
-lazy_loader==0.4
-lmdb==1.5.1
-lxml==5.2.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.3
-matplotlib==3.9.1
-mdurl==0.1.2
-mkl==2024.2.0
-mkl-fft==1.3.8
-mkl-random==1.2.4
-mkl-service==2.4.0
-mmh3==4.1.0
-monotonic==1.6
-mpmath==1.3.0
-multidict==6.0.5
-mypy-extensions==1.0.0
-mysql-connector-python==9.0.0
-networkx==3.3
-numexpr==2.8.7
-numpy==1.26.4
-oauthlib==3.2.2
-onnxruntime==1.18.1
-openai==1.35.7
-opencv-contrib-python==4.10.0.84
-opencv-python==4.10.0.84
-opentelemetry-api==1.25.0
-opentelemetry-exporter-otlp-proto-common==1.25.0
-opentelemetry-exporter-otlp-proto-grpc==1.25.0
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-asgi==0.46b0
-opentelemetry-instrumentation-fastapi==0.46b0
-opentelemetry-proto==1.25.0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-util-http==0.46b0
-opt-einsum==3.3.0
-orjson==3.10.5
-overrides==7.7.0
-packaging==24.1
-paddleocr==2.8.0
-paddlepaddle==2.6.1
-pandas==2.2.2
-pillow==10.4.0
-posthog==3.5.0
-protobuf==3.20.2
+ipython==8.26.0
+jedi==0.19.1
+matplotlib-inline==0.1.7
+parso==0.8.4
+prompt_toolkit==3.0.47
+proto-plus==1.24.0
+protobuf==4.25.4
+pure_eval==0.2.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
-pyclipper==1.3.0.post5
-pycparser==2.22
-pydantic==2.7.4
-pydantic_core==2.18.4
+pydantic==2.8.2
+pydantic_core==2.20.1
 Pygments==2.18.0
-PyMySQL==1.1.1
 pyparsing==3.1.2
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-pyreadline3==3.4.1
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
-rapidfuzz==3.9.4
-regex==2024.5.15
 requests==2.32.3
-requests-oauthlib==2.0.0
-rich==13.7.1
 rsa==4.9
-scikit-image==0.24.0
-scipy==1.14.0
-shapely==2.0.5
-shellingham==1.5.4
 six==1.16.0
-sniffio==1.3.1
-soupsieve==2.5
-SQLAlchemy==2.0.31
-starlette==0.37.2
-sympy==1.12.1
-tbb==2021.13.0
-tenacity==8.4.2
-termcolor==2.4.0
-tifffile==2024.7.2
-tiktoken==0.7.0
-tokenizers==0.19.1
-tomli==2.0.1
+stack-data==0.6.3
 tqdm==4.66.4
-typer==0.12.3
-typing-inspect==0.9.0
+traitlets==5.14.3
 typing_extensions==4.12.2
-tzdata==2023.3
-ujson==5.10.0
+uritemplate==4.1.1
 urllib3==2.2.2
-uvicorn==0.30.1
-watchfiles==0.22.0
-websocket-client==1.8.0
-websockets==12.0
-wrapt==1.16.0
-yarl==1.9.4
-zipp==3.19.2
+wcwidth==0.2.13
